tests/ui/const-generics/check_const_arg_type_in_free_alias.lazy.stderr
error: the constant `B` is not of type `usize`
  --> $DIR/check_const_arg_type_in_free_alias.rs:15:1
   |
LL | type ArrLen<const B: bool> = [(); B];
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `bool`
   |
   = note: the length of array `[(); B]` must be type `usize`

error: the constant `B` is not of type `usize`
  --> $DIR/check_const_arg_type_in_free_alias.rs:19:1
   |
LL | type ConstArg<const B: bool> = Foo<B>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `bool`
   |
note: required by a const generic parameter in `Foo`
  --> $DIR/check_const_arg_type_in_free_alias.rs:13:12
   |
LL | struct Foo<const N: usize>;
   |            ^^^^^^^^^^^^^^ required by this const generic parameter in `Foo`

error: the constant `B` is not of type `usize`
  --> $DIR/check_const_arg_type_in_free_alias.rs:32:1
   |
LL | type Alias<const B: bool> = <() as IdentityWithUnused<B>>::This;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `bool`
   |
note: required for `()` to implement `IdentityWithUnused<B>`
  --> $DIR/check_const_arg_type_in_free_alias.rs:28:25
   |
LL | impl<T, const N: usize> IdentityWithUnused<N> for T {
   |         --------------  ^^^^^^^^^^^^^^^^^^^^^     ^
   |         |
   |         unsatisfied trait bound introduced here

error: the constant `B` is not of type `usize`
  --> $DIR/check_const_arg_type_in_free_alias.rs:38:1
   |
LL | type UseFree<const B: bool> = Free<B>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `bool`
   |
note: required by a bound on the type alias `Free`
  --> $DIR/check_const_arg_type_in_free_alias.rs:37:11
   |
LL | type Free<const N: usize> = [(); N];
   |           ^^^^^^^^^^^^^^ required by this bound

error: the constant `N` is not of type `bool`
  --> $DIR/check_const_arg_type_in_free_alias.rs:51:1
   |
LL | type UseFreeIndirectlyCorrect<const N: usize> = UseFree<N>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `usize`
   |
note: required by a bound on the type alias `UseFree`
  --> $DIR/check_const_arg_type_in_free_alias.rs:38:14
   |
LL | type UseFree<const B: bool> = Free<B>;
   |              ^^^^^^^^^^^^^ required by this bound

error: the constant `B` is not of type `usize`
  --> $DIR/check_const_arg_type_in_free_alias.rs:58:1
   |
LL | type IndirectArr<const B: bool> = Wrap<Wrap<[(); B]>>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `bool`
   |
   = note: the length of array `[(); B]` must be type `usize`

error: the constant `B` is not of type `usize`
  --> $DIR/check_const_arg_type_in_free_alias.rs:62:1
   |
LL | type IndirectConstArg<const B: bool> = Wrap<Wrap<Foo<B>>>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `bool`
   |
note: required by a const generic parameter in `Foo`
  --> $DIR/check_const_arg_type_in_free_alias.rs:13:12
   |
LL | struct Foo<const N: usize>;
   |            ^^^^^^^^^^^^^^ required by this const generic parameter in `Foo`

error[E0308]: mismatched types
  --> $DIR/check_const_arg_type_in_free_alias.rs:17:24
   |
LL | type AnonArrLen = [(); true];
   |                        ^^^^ expected `usize`, found `bool`

error[E0308]: mismatched types
  --> $DIR/check_const_arg_type_in_free_alias.rs:21:25
   |
LL | type AnonConstArg = Foo<true>;
   |                         ^^^^ expected `usize`, found `bool`

error[E0308]: mismatched types
  --> $DIR/check_const_arg_type_in_free_alias.rs:34:44
   |
LL | type AnonAlias = <() as IdentityWithUnused<true>>::This;
   |                                            ^^^^ expected `usize`, found `bool`

error[E0308]: mismatched types
  --> $DIR/check_const_arg_type_in_free_alias.rs:40:25
   |
LL | type AnonUseFree = Free<true>;
   |                         ^^^^ expected `usize`, found `bool`

error[E0308]: mismatched types
  --> $DIR/check_const_arg_type_in_free_alias.rs:53:45
   |
LL | type AnonUseFreeIndirectlyCorrect = UseFree<1_usize>;
   |                                             ^^^^^^^ expected `bool`, found `usize`

error[E0308]: mismatched types
  --> $DIR/check_const_arg_type_in_free_alias.rs:60:39
   |
LL | type AnonIndirectArr = Wrap<Wrap<[(); true]>>;
   |                                       ^^^^ expected `usize`, found `bool`

error[E0308]: mismatched types
  --> $DIR/check_const_arg_type_in_free_alias.rs:64:43
   |
LL | type AnonIndirectConstArg = Wrap<Wrap<Foo<true>>>;
   |                                           ^^^^ expected `usize`, found `bool`

error: aborting due to 14 previous errors

For more information about this error, try `rustc --explain E0308`.
